--- a/Lesson3/config.json
+++ b/Lesson3/config.json
@@ -1,5 +1,5 @@
 {
-  "project_folder": "./node-pi-lesson-3",
-  "start_file": "app.js",
+  "project_folder": "./c-pi-lesson-3",
+  "start_file": "app",
   "ssh_port": 22
 }
