sample code for lesson 4 completed

--- a/Lesson4/app/CMakeLists.txt
+++ b/Lesson4/app/CMakeLists.txt
@@ -12,7 +12,8 @@ else()
 endif()
 
 include_directories(~/azure-iot-sdks/c/c-utility/inc
-                    ~/azure-iot-sdks/c/iothub_client/inc)
+                    ~/azure-iot-sdks/c/iothub_client/inc
+                    ~/azure-iot-sdks/c/serializer/inc)
 
 link_directories(~/azure-iot-sdks/c/cmake/iotsdk_linux/serializer
                  ~/azure-iot-sdks/c/cmake/iotsdk_linux/iothub_client
