--- a/Lesson4/app/CMakeLists.txt
+++ b/Lesson4/app/CMakeLists.txt
@@ -25,7 +25,7 @@ target_link_libraries(app wiringPi
                           serializer
                           iothub_client
                           iothub_client_mqtt_transport
-                          uamqp
+                          umqtt
                           aziotsharedutil
                           ssl
                           crypto
