fix azure iot sdk param name

--- a/Lesson3/app/CMakeLists.txt
+++ b/Lesson3/app/CMakeLists.txt
@@ -6,13 +6,13 @@ if (CMAKE_C_COMPILER_ID STREQUAL "GNU")
   set (CMAKE_CXX_FLAGS "--std=c++11 -g ${CMAKE_CXX_FLAGS}")
 endif()
 
-include_directories(${azureiotsdks}/c/c-utility/inc
-                    ${azureiotsdks}/c/iothub_client/inc)
+include_directories(${azure_IoT_Sdks}/c/c-utility/inc
+                    ${azure_IoT_Sdks}/c/iothub_client/inc)
 
-link_directories(${azureiotsdks}/c/cmake/iotsdk_linux/serializer
-                 ${azureiotsdks}/c/cmake/iotsdk_linux/iothub_client
-                 ${azureiotsdks}/c/cmake/iotsdk_linux/c-utility
-                 ${azureiotsdks}/c/cmake/iotsdk_linux/umqtt)
+link_directories(${azure_IoT_Sdks}/c/cmake/iotsdk_linux/serializer
+                 ${azure_IoT_Sdks}/c/cmake/iotsdk_linux/iothub_client
+                 ${azure_IoT_Sdks}/c/cmake/iotsdk_linux/c-utility
+                 ${azure_IoT_Sdks}/c/cmake/iotsdk_linux/umqtt)
 
 add_executable(Lesson3 main.c)
 target_link_libraries(Lesson3 wiringPi
