--- a/.travis.yml
+++ b/.travis.yml
@@ -5,10 +5,10 @@ install:
   - sudo add-apt-repository ppa:ubuntu-toolchain-r/test --yes
   - sudo apt-get update -qq 
   - sudo apt-get install -qq libstdc++6-4.7-dev  
-  - ./install_oclint.sh
+  - sudo ./install_oclint.sh
 
 script: 
-  - ./do_oclint.sh
+  - sudo ./do_oclint.sh
 
 after_success:
   - echo "Success"
