--- a/.travis.yml
+++ b/.travis.yml
@@ -2,15 +2,10 @@ language: cpp
 compiler: gcc
 
 install:
-  - sudo add-apt-repository ppa:ubuntu-toolchain-r/test --yes
-  - sudo apt-get update -qq 
-  - sudo apt-get install -qq libstdc++6-4.7-dev
-  - sudo chmod 777 ./install_oclint.sh  
-  - sudo chmod 777 ./do_oclint.sh  
-  - ./install_oclint.sh
+  - pip install cpplint
 
 script: 
-  - ./do_oclint.sh
+  - cpplint ./Lesson1/main.c
 
 after_success:
   - echo "Success"
