--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ install:
   - sudo pip install cpplint
 
 script: 
-  - cpplint --filter=-[whitespace/braces]
+  - cpplint --filter=-[whitespace/braces] ./Lesson1/app/main.c ./Lesson3/app/main.c ./Lesson4/app/main.c  
 
 after_success:
   - echo "Success"
