--- a/Lesson1/app/CMakeLists.txt
+++ b/Lesson1/app/CMakeLists.txt
@@ -1,9 +1,10 @@
 #Copyright (c) Microsoft. All rights reserved.
 #Licensed under the MIT license. See LICENSE file in the project root for full license information.
 
+cmake_minimum_required(VERSION 2.8.11)
+
 if (CMAKE_C_COMPILER_ID STREQUAL "GNU")
   set (CMAKE_C_FLAGS "--std=c99 -g ${CMAKE_C_FLAGS}")
-  set (CMAKE_CXX_FLAGS "--std=c++11 -g ${CMAKE_CXX_FLAGS}")
 endif()
 
 add_executable(app main.c)
