--- a/Lesson4/app/CMakeLists.txt
+++ b/Lesson4/app/CMakeLists.txt
@@ -1,19 +1,13 @@
 #Copyright (c) Microsoft. All rights reserved.
 #Licensed under the MIT license. See LICENSE file in the project root for full license information.
+cmake_minimum_required(VERSION 2.8.11)
 
 if (CMAKE_C_COMPILER_ID STREQUAL "GNU")
   set (CMAKE_C_FLAGS "--std=c99 -g ${CMAKE_C_FLAGS}")
-  set (CMAKE_CXX_FLAGS "--std=c++11 -g ${CMAKE_CXX_FLAGS}")
 endif()
 
-include_directories(~/azure-iot-sdks/c/c-utility/inc
-                    ~/azure-iot-sdks/c/iothub_client/inc
-                     ~/azure-iot-sdks/c/serializer/inc)
-
-link_directories(~/azure-iot-sdks/c/cmake/iotsdk_linux/serializer
-                 ~/azure-iot-sdks/c/cmake/iotsdk_linux/iothub_client
-                 ~/azure-iot-sdks/c/cmake/iotsdk_linux/c-utility
-                 ~/azure-iot-sdks/c/cmake/iotsdk_linux/umqtt)
+include_directories("/usr/include/azureiot"
+                    "/usr/include/azureiot/inc/")
 
 add_executable(app main.c)
 target_link_libraries(app wiringPi
