--- a/Lesson3/app/CMakeLists.txt
+++ b/Lesson3/app/CMakeLists.txt
@@ -14,8 +14,8 @@ link_directories(${azure_IoT_Sdks}/c/cmake/iotsdk_linux/serializer
                  ${azure_IoT_Sdks}/c/cmake/iotsdk_linux/c-utility
                  ${azure_IoT_Sdks}/c/cmake/iotsdk_linux/umqtt)
 
-add_executable(Lesson3 main.c)
-target_link_libraries(Lesson3 wiringPi
+add_executable(lesson3 main.c)
+target_link_libraries(lesson3 wiringPi
                           serializer
                           iothub_client
                           iothub_client_mqtt_transport
