--- a/Lesson1/app/config.json
+++ b/Lesson1/app/config.json
@@ -1,6 +1,6 @@
 {
   "device": "raspberrypi",
-  "deviceip": "[device ip address]",
+  "deviceip": "[device IP address]",
   "username": "pi",
   "password": "raspberry"
 }
